# Project-Card-Game

./: CMakeLists.txt  Card.cpp  Card.h  Game.cpp  Game.h  Player.cpp  Player.h  README.md  cards_data.txt  main.cpp  main_test.cpp  main_test.h  test.cpp  test.h
